--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,8 @@
 <div class="row">
   <div class="col-md-8 col-md-offset-2">
+    <h1>Val Writes Community</h1>
+<p>Welcome to the Val Writes community. Users must fill out a profile in order to be visible in the community.</p>
+    
     <ul class="list-unstyled">
       <% @users.each do |user| %>
         <% if user.profile %>
